--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
         <link type="text/css" rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <section>
+        <section class="main">
+            <button id="clear">Clear Grid</button>
+        <container class="container">
             
+            
+        </container>
         </section>
-
         <script type="text/javascript" src="js/script.js"></script>
     </body>
 </html>
