--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <body>
         <section class="main">
             <button id="clear">Clear Grid</button>
-        <container class="container">
-            
-            
-        </container>
+            <button id="resize">Resize Grid</button>
+            <container class="container"></container>
         </section>
         <script type="text/javascript" src="js/script.js"></script>
     </body>
