Created footer and links

--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Pixel-Sketch</title>
         <link type="text/css" rel="stylesheet" href="css/style.css" />
+        <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <section class="main">
-            <button id="clear">Clear Grid</button>
-            <button id="resize">Resize Grid</button>
+            <h1>Pixel Sketch</h1>
             <container class="container"></container>
         </section>
-        <script type="text/javascript" src="js/script.js"></script>
+        <button id="clear">Clear Grid</button>
+        <button id="resize">Resize Grid</button>
+
+        <footer>
+            <h2>Created by:<a href="https://github.com/Conatrad/Etch-a-Sketch" target="_blank">
+                Christopher Collins <img src="Images/GitHub-Mark-Light-32px.png" alt="Github logo" /> </a></h2>
+            <script type="text/javascript" src="js/script.js"></script>
+        </footer>
     </body>
 </html>
